Finalizamos a pagina home, e no back end criamos os endpoint de listar, obter  gravar.
