# back-end/server.js
@@ -4,6 +4,7 @@ import cookieParser from 'cookie-parser'
 import { createRequire } from "module"
 const require = createRequire(import.meta.url)
 const outputJson = require("./swagger-output.json")
+import routerUsuarios from './routes/usuarioRoute.js'
 
 const app = express()
 
@@ -11,6 +12,8 @@ app.use(express.json())
 app.use(cookieParser())
 
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson))
+
+app.use("/usuarios", routerUsuarios)
 
 app.listen(5000, function() {
   console.log("Servidor Web em Funcionamento!");
